--- a/src/assets/landing-1.css
+++ b/src/assets/landing-1.css
@@ -1,22 +1,20 @@
-.landing-1-wrapper {
+.landing-wrapper {
     /* landing */
 
-    position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     background: #F9F8F8;
 }
 
 #gradient-canvas {
     position:relative;
-    width: 2039px;
-    height: 669px;
-    left: -110px;
-    top: -349.07px;
 
+    width: 100%;
+    height: 58vh;
+    clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%);
     /* background: linear-gradient(92.43deg, #14B5EB 18.51%, #D226E1 51.06%); */
-    transform: rotate(-13deg);
+    /* transform: rotate(-17.5deg); */
 
     --gradient-color-1: #14b5eb;
     --gradient-color-2: #d226e1;
@@ -32,7 +30,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0px;
-    gap: 15px;
+    gap: 25px;
     isolation: isolate;
 
     position: absolute;
@@ -48,7 +46,8 @@
     font-style: normal;
     font-weight: 700;
     font-size: 76px;
-    line-height: 87px;
+
+    margin: 0px;
 
     background: linear-gradient(114.71deg, rgba(0, 0, 0, 0.52) 18.07%, rgba(0, 0, 0, 0.52) 18.08%, rgba(0, 0, 0, 0.8) 63.21%);
     -webkit-background-clip: text;
@@ -74,6 +73,8 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
+
+    margin: 0px;
 
     color: #5F5F5F;
 
