--- a/src/assets/landing-1.css
+++ b/src/assets/landing-1.css
@@ -1,3 +1,9 @@
+body {
+    max-width: 100vw;
+    margin: 0;
+    padding: 0;
+}
+
 .landing-wrapper {
     /* landing */
 
@@ -13,6 +19,7 @@
     width: 100%;
     height: 58vh;
     clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%);
+    margin: 0;
     /* background: linear-gradient(92.43deg, #14B5EB 18.51%, #D226E1 51.06%); */
     /* transform: rotate(-17.5deg); */
 
@@ -33,10 +40,40 @@
     gap: 25px;
     isolation: isolate;
 
+    position: relative;
+    max-width: 40vw;
+}
+
+.top-info-align-wrapper {
     position: absolute;
-    max-width: 908px;
-    left: 186px;
-    top: 242px;
+    top: 0px;
+    max-width: 100vw;
+    min-width: 80vw;
+    padding-top: 25vh;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+
+    padding-left: 10vw;
+
+    padding-right: 10vw;
+}
+
+@media all and (max-width: 600px) {
+    .top-info-align-wrapper {
+        flex-direction: column;
+    }
+
+    .info-wrapper {
+        max-width: 100vw;
+        left: auto;
+        position: relative;
+    }
+
+    .landing-wrapper {
+    }
 }
 
 .gradient-text {
@@ -45,7 +82,8 @@
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 700;
-    font-size: 76px;
+    /* font-size: 76px; */
+    font-size: clamp(40px, 4vw + 0.5rem, 80px);
 
     margin: 0px;
 
