--- a/src/assets/landing-2.css
+++ b/src/assets/landing-2.css
@@ -5,21 +5,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:stretch;
-    padding: 0px 5px;
-    gap: 147px;
+    justify-content: space-around;
+    gap: 0px;
 
     position: relative;
-    width: 100vw;
-    height: 100vh;
-    left: 155px;
-    top: 0px;
-}
-
-.landing-subpage-left-wrapper {
-    /* Frame 11 */
-    position: relative;
-    width: 640px;
+    width: 80vw;
     height: 100vh;
 }
 
@@ -31,8 +21,8 @@
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 700;
-    font-size: 96px;
-    line-height: 110px;
+    font-size: clamp(20px, 11vw + 0.1rem, 96px);
+    line-height: clamp(10px, 12vw + 0.1rem, 110px);
     margin: 0px;
 
     background: linear-gradient(114.71deg, rgba(0, 0, 0, 0.52) 18.07%, rgba(0, 0, 0, 0.52) 18.08%, rgba(0, 0, 0, 0.8) 63.21%);
@@ -51,8 +41,7 @@
 .landing-subpage-subheading {
     /* Lorem pahfujbaouifhiaebfo ]aeoufhapoeujfpou jhbwjgdvbaojefpi hbwa09di Lorem pahfujbaouifhiaebfo ]aeoufhapoeujfpou jhbwjgdvbaojefpi hbwa09di */
 
-    width: 512px;
-    height: 63px;
+    max-width: 512px;
 
     margin: 0px;
 
@@ -71,7 +60,7 @@
     flex-grow: 0;
 }
 
-.landing-subpage-left-text-wrapper {
+.landing-subpage-left-wrapper {
     /* left-text-wrapper */
 
     /* Auto layout */
@@ -81,18 +70,11 @@
     padding: 0px 5px;
     gap: 25px;
 
-    position: absolute;
     max-width: 623px;
-    left: 0px;
-    top: 237px;
 }
 
 .landing-subpage-right-wrapper {
     /* right-wrapper */
-
-    width: 795px;
-    height: 705px;
-
 
     /* Inside auto layout */
     flex: none;
@@ -100,24 +82,17 @@
     flex-grow: 0;
 }
 
-.center-cell-wrapper {
-    /* Frame 14 */
+@media all and (max-width: 1000px) {
+    .landing-subpage-layout {
+        flex-direction: column;
+    }
 
-    /* Auto layout */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    gap: 8px;
+    .landing-subpage-left-wrapper {
+        justify-content: center;
+        align-items: center;
+    }
 
-    position: relative;
-    width: 160px;
-    height: 160px;
-    left: calc(50% - 160px/2 + 2.5px);
-    top: calc(50% - 160px/2 + 38.5px);
-
-    background: #FFFFFF;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.3);
-    border-radius: 20px;
+    .landing-subpage-heading {
+        text-align: center;
+    }
 }
