--- a/src/assets/landing-1.css
+++ b/src/assets/landing-1.css
@@ -13,8 +13,15 @@ body {
     background: #F9F8F8;
 }
 
+@media all and (max-width: 1000px) {
+    .landing-wrapper {
+        height: auto;
+        min-height: 100vh;
+    }
+}
+
 #gradient-canvas {
-    position:relative;
+    position: absolute;
 
     width: 100%;
     height: 58vh;
@@ -45,7 +52,7 @@ body {
 }
 
 .top-info-align-wrapper {
-    position: absolute;
+    position: relative;
     top: 0px;
     max-width: 100vw;
     min-width: 80vw;
