--- a/src/assets/landing-2.css
+++ b/src/assets/landing-2.css
@@ -85,6 +85,15 @@
 @media all and (max-width: 1000px) {
     .landing-subpage-layout {
         flex-direction: column;
+        height: auto;
+
+        justify-content: center;
+        align-items: center;
+        gap: 10vw;
+
+        width: 100vw;
+
+        padding: 10vh 0;
     }
 
     .landing-subpage-left-wrapper {
@@ -93,6 +102,16 @@
     }
 
     .landing-subpage-heading {
+        text-align: center;
+    }
+
+    .landing-subpage-animation-canvas {
+        background-color: brown;
+        width: 80vw;
+        height: 80vw;
+    }
+
+    .landing-subpage-subheading {
         text-align: center;
     }
 }
