--- a/src/assets/landing-footer.css
+++ b/src/assets/landing-footer.css
@@ -46,6 +46,12 @@
     font-weight: 700;
     font-size: clamp(8px, 4vw + 0.1rem, 24px);
     color: white;
+
+    transition: 0.3s ease-in;
+}
+
+.footer-content-text:hover {
+    color: rgb(200, 200, 200, 1);
 }
 
 .footer-bottom-wrapper {
@@ -71,7 +77,7 @@
     background-color: #FFFFFF;
     border-radius: 20px;
     height: clamp(46px, 4vw, 4vw);
-    width: clamp(136px, 11.86vw, 4vw);
+    width: clamp(136px, 11.86vw, 11.86vw);
     padding: 0.5vw 0.5vw;
 }
 
