Add back option to mobile navbar

--- a/src/assets/mobile-navbar.css
+++ b/src/assets/mobile-navbar.css
@@ -42,12 +42,14 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: space-between;
 }
 
 .expanded-navbar-close-image {
     width: 10vw;
     height: 10vw;
+
+    cursor: pointer;
 }
 
 .expanded-navbar-bottom-wrapper {
