--- a/src/assets/dropdown-item.css
+++ b/src/assets/dropdown-item.css
@@ -1,8 +1,11 @@
 .dropdown-item-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
+    gap: 8px;
+
+    width: 80px;
 
     padding: 4px 4px;
     margin: 0;
@@ -27,6 +30,8 @@
     font-size: 12px;
     line-height: 14px;
     text-align: center;
+
+    margin: 0;
 
     color: #000000;
 }
