--- a/src/assets/navbar.css
+++ b/src/assets/navbar.css
@@ -7,6 +7,7 @@
     align-items: start;
     justify-content: center;
     padding: 0px;
+    margin-top: 7px;
     gap: 10px;
 
     position: absolute;
