--- a/src/assets/gallery-header.css
+++ b/src/assets/gallery-header.css
@@ -1,5 +1,4 @@
 .gallery-header-wrapper {
-    width: 100%;
     position: relative;
     top: 0px;
 
@@ -8,11 +7,28 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     gap: 15px;
 
     padding: 8px 40px;
+}
+
+.gallery-header-left-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.gallery-header-text {
+    font-family: 'Ubuntu';
+    font-style: normal;
+    color: black;
+    font-weight: 700;
+    font-size: 18px;
+    margin: 0px;
 }
 
 @media screen and (max-width: 600px) {
