--- a/src/assets/landing-page-main-subsection.css
+++ b/src/assets/landing-page-main-subsection.css
@@ -4,29 +4,39 @@ html, body {
     padding: 0;
 }
 
-.landing-wrapper {
-    /* landing */
+#gradient-canvas-main {
+    position: absolute;
 
-    max-width: 100vw;
-    width: 100vw;
-
+    width: 100%;
+    height: 58vh;
+    clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%);
     margin: 0;
-    padding: 0;
+    /* background: linear-gradient(92.43deg, #14B5EB 18.51%, #D226E1 51.06%); */
+    /* transform: rotate(-17.5deg); */
 
-    background-color: #f9f8f8;
-
-    position: relative;
-    min-height: 100%;
+    --gradient-color-1: #FF2339;
+    --gradient-color-2: #D226E1;
+    --gradient-color-3: #9141ac;
+    --gradient-color-4: #d42323;
 }
 
-@media all and (max-width: 1000px) {
-    .landing-wrapper {
-        height: auto;
-        min-height: 100vh;
-    }
+#gradient-canvas-myp {
+    position: absolute;
+
+    width: 100%;
+    height: 58vh;
+    clip-path: polygon(0 0, 100% 0, 100% 0%, 0% 100%);
+    margin: 0;
+    /* background: linear-gradient(92.43deg, #14B5EB 18.51%, #D226E1 51.06%); */
+    /* transform: rotate(-17.5deg); */
+
+    --gradient-color-1: #FF2339;
+    --gradient-color-2: #F0A133;
+    --gradient-color-3: #ffe81d;
+    --gradient-color-4: #e75538;
 }
 
-#gradient-canvas {
+#gradient-canvas-dp {
     position: absolute;
 
     width: 100%;
@@ -74,22 +84,6 @@ html, body {
     padding-right: 10vw;
 }
 
-@media all and (max-width: 600px) {
-    .top-info-align-wrapper {
-        flex-direction: column;
-    }
-
-    .info-wrapper {
-        max-width: 100vw;
-        left: auto;
-        position: relative;
-    }
-
-    .landing-wrapper {
-        min-height: auto;
-    }
-}
-
 .gradient-text {
     /* A World-class Curriculum for the Next Generation of Leaders */
 
@@ -135,4 +129,16 @@ html, body {
     order: 2;
     flex-grow: 0;
     z-index: 2;
+}
+
+@media all and (max-width: 600px) {
+    .top-info-align-wrapper {
+        flex-direction: column;
+    }
+
+    .info-wrapper {
+        max-width: 100vw;
+        left: auto;
+        position: relative;
+    }
 }
