--- a/src/assets/landing-page-subsection.css
+++ b/src/assets/landing-page-subsection.css
@@ -1,3 +1,18 @@
+.landing-wrapper {
+    /* landing */
+
+    max-width: 100vw;
+    width: 100vw;
+
+    margin: 0;
+    padding: 0;
+
+    background-color: #f9f8f8;
+
+    position: relative;
+    min-height: 100%;
+}
+
 .landing-subpage-layout {
     /* subpage-layout */
 
@@ -14,6 +29,21 @@
 
     width: 100vw;
     min-height: 100vh;
+}
+
+.landing-subpage-left-wrapper {
+    /* left-text-wrapper */
+
+    /* Auto layout */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px 5px;
+    gap: 25px;
+
+    margin: 0;
+
+    width: 40vw;
 }
 
 .landing-subpage-heading {
@@ -63,36 +93,17 @@
     flex-grow: 0;
 }
 
-.landing-subpage-left-wrapper {
-    /* left-text-wrapper */
-
-    /* Auto layout */
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px 5px;
-    gap: 25px;
-
-    margin: 0;
-
-    width: 40vw;
-}
-
-.landing-subpage-right-wrapper {
-    /* right-wrapper */
-
-    /* Inside auto layout */
-    flex: none;
-    order: 1;
-    flex-grow: 0;
-}
-
 .landing-subpage-animation-canvas {
     width: 40vw;
     height: 40vw;
 }
 
 @media all and (max-width: 1000px) {
+    .landing-wrapper {
+        height: auto;
+        min-height: 100vh;
+    }
+
     .landing-subpage-layout {
         flex-direction: column;
         height: auto;
@@ -114,12 +125,18 @@
         text-align: center;
     }
 
+    .landing-subpage-subheading {
+        text-align: center;
+    }
+
     .landing-subpage-animation-canvas {
         width: 80vw;
         height: 80vw;
     }
+}
 
-    .landing-subpage-subheading {
-        text-align: center;
+@media all and (max-width: 600px) {
+    .landing-wrapper {
+        min-height: auto;
     }
 }
