--- a/src/assets/landing-footer.css
+++ b/src/assets/landing-footer.css
@@ -49,21 +49,28 @@
 
 .footer-bottom-wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-
-    padding-bottom: 2vh;
-    padding-left: 10vw;
-    padding-right: 10vw;
+    padding: 0vw 24vw;
 }
 
-.footer-bottom-right-wrapper {
+.footer-bottom-vertical-split {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 1vw;
+    padding-bottom: 25px;
+}
+
+.footer-bottom-copyright-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 20px;
 }
 
 .school-name-text {
